resnet repeat exp

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
        "(2768, 16, 16, 1)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,33 +619,33 @@
     "class ResNet(nn.Module):\n",
     "    def __init__(self, block, num_blocks, num_classes=1000, resolution=(224, 224), heads=4, is_botnet=False):\n",
     "        super(ResNet, self).__init__()\n",
-    "        self.in_planes = 16\n",
+    "        self.in_planes = 64\n",
     "        self.resolution = list(resolution)\n",
     "\n",
-    "        self.conv1 = nn.Conv2d(1, 16, kernel_size=7, stride=2, padding=3, bias=False)\n",
+    "        self.conv1 = nn.Conv2d(1, 64, kernel_size=7, stride=2, padding=3, bias=False)\n",
     "        if self.conv1.stride[0] == 2:\n",
     "            self.resolution[0] /= 2\n",
     "        if self.conv1.stride[1] == 2:\n",
     "            self.resolution[1] /= 2\n",
-    "        self.bn1 = nn.BatchNorm2d(16)\n",
+    "        self.bn1 = nn.BatchNorm2d(64)\n",
     "        self.relu = nn.ReLU(inplace=True)\n",
     "        self.maxpool = nn.MaxPool2d(kernel_size=3, stride=2, padding=1) # for ImageNet\n",
     "        if self.maxpool.stride == 2:\n",
     "            self.resolution[0] /= 2\n",
     "            self.resolution[1] /= 2\n",
     "\n",
-    "        self.layer1 = self._make_layer(block, 16, num_blocks[0], stride=1)\n",
-    "        self.layer2 = self._make_layer(block, 32, num_blocks[1], stride=2)\n",
-    "        self.layer3 = self._make_layer(block, 64, num_blocks[2], stride=2)\n",
+    "        self.layer1 = self._make_layer(block, 64, num_blocks[0], stride=1)\n",
+    "        self.layer2 = self._make_layer(block, 128, num_blocks[1], stride=2)\n",
+    "        self.layer3 = self._make_layer(block, 256, num_blocks[2], stride=2)\n",
     "        if is_botnet == False:\n",
-    "            self.layer4 = self._make_layer(block, 128, num_blocks[3], stride=2, heads=heads, mhsa=False)\n",
+    "            self.layer4 = self._make_layer(block, 512, num_blocks[3], stride=2, heads=heads, mhsa=False)\n",
     "        else:\n",
-    "            self.layer4 = self._make_layer(block, 128, num_blocks[3], stride=1, heads=heads, mhsa=True)\n",
+    "            self.layer4 = self._make_layer(block, 512, num_blocks[3], stride=1, heads=heads, mhsa=True)\n",
     "            \n",
     "        self.avgpool = nn.AdaptiveAvgPool2d((1, 1))\n",
     "        self.fc = nn.Sequential(\n",
     "            nn.Dropout(0.3), # All architecture deeper than ResNet-200 dropout_rate: 0.2\n",
-    "            nn.Linear(128 * block.expansion, num_classes)\n",
+    "            nn.Linear(512 * block.expansion, num_classes)\n",
     "        )\n",
     "\n",
     "    def _make_layer(self, block, planes, num_blocks, stride=1, heads=4, mhsa=False):\n",
@@ -687,16 +687,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1489089"
+       "23540433"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -706,14 +706,16 @@
     "# # 514497 (original: 8,054,609)\n",
     "\n",
     "resnet = get_ResNet(num_blocks=[3,4,6,3])\n",
-    "# 1489089 (original: 23,546,705)\n",
+    "# now, i.e., original resnet50 + in_channel=1 -- 23540433 (layer1 16 -> 64)\n",
+    "# (layer1 64 + in_channel=1) -- 1489089\n",
+    "# original resnet50 + in_channel=3 -- 23,546,705)\n",
     "\n",
     "sum([p.numel() for p in resnet.parameters()])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -722,7 +724,7 @@
        "torch.Size([128, 17])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
