--- a/demo.ipynb
+++ b/demo.ipynb
@@ -2,9 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'model.efficientnet'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32md:\\Inner_Wave\\Internal_Solitary_Wave_Localization\\demo.ipynb Cell 1\u001b[0m line \u001b[0;36m1\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Inner_Wave/Internal_Solitary_Wave_Localization/demo.ipynb#W0sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtorch\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mnn\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mfunctional\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mF\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Inner_Wave/Internal_Solitary_Wave_Localization/demo.ipynb#W0sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39meerie\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/d%3A/Inner_Wave/Internal_Solitary_Wave_Localization/demo.ipynb#W0sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mmodel\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39m*\u001b[39m\n",
+      "File \u001b[1;32md:\\Inner_Wave\\Internal_Solitary_Wave_Localization\\model\\__init__.py:5\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39mequiresnet\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39m*\u001b[39m\n\u001b[0;32m      4\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39mconvnext\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39m*\u001b[39m\n\u001b[1;32m----> 5\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39mefficientnet\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39m*\u001b[39m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'model.efficientnet'"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -20,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1296,10 +1309,287 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\"\"\"\n",
+    "Creates a EfficientNetV2 Model as defined in:\n",
+    "Mingxing Tan, Quoc V. Le. (2021). \n",
+    "EfficientNetV2: Smaller Models and Faster Training\n",
+    "arXiv preprint arXiv:2104.00298.\n",
+    "import from https://github.com/d-li14/mobilenetv2.pytorch\n",
+    "\"\"\"\n",
+    "\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import math\n",
+    "\n",
+    "__all__ = ['effnetv2_s', 'effnetv2_m', 'effnetv2_l', 'effnetv2_xl']\n",
+    "\n",
+    "\n",
+    "def _make_divisible(v, divisor, min_value=None):\n",
+    "    \"\"\"\n",
+    "    This function is taken from the original tf repo.\n",
+    "    It ensures that all layers have a channel number that is divisible by 8\n",
+    "    It can be seen here:\n",
+    "    https://github.com/tensorflow/models/blob/master/research/slim/nets/mobilenet/mobilenet.py\n",
+    "    :param v:\n",
+    "    :param divisor:\n",
+    "    :param min_value:\n",
+    "    :return:\n",
+    "    \"\"\"\n",
+    "    if min_value is None:\n",
+    "        min_value = divisor\n",
+    "    new_v = max(min_value, int(v + divisor / 2) // divisor * divisor)\n",
+    "    # Make sure that round down does not go down by more than 10%.\n",
+    "    if new_v < 0.9 * v:\n",
+    "        new_v += divisor\n",
+    "    return new_v\n",
+    "\n",
+    "\n",
+    "# SiLU (Swish) activation function\n",
+    "if hasattr(nn, 'SiLU'):\n",
+    "    SiLU = nn.SiLU\n",
+    "else:\n",
+    "    # For compatibility with old PyTorch versions\n",
+    "    class SiLU(nn.Module):\n",
+    "        def forward(self, x):\n",
+    "            return x * torch.sigmoid(x)\n",
+    "\n",
+    " \n",
+    "class SELayer(nn.Module):\n",
+    "    def __init__(self, inp, oup, reduction=4):\n",
+    "        super(SELayer, self).__init__()\n",
+    "        self.avg_pool = nn.AdaptiveAvgPool2d(1)\n",
+    "        self.fc = nn.Sequential(\n",
+    "                nn.Linear(oup, _make_divisible(inp // reduction, 8)),\n",
+    "                SiLU(),\n",
+    "                nn.Linear(_make_divisible(inp // reduction, 8), oup),\n",
+    "                nn.Sigmoid()\n",
+    "        )\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        b, c, _, _ = x.size()\n",
+    "        y = self.avg_pool(x).view(b, c)\n",
+    "        y = self.fc(y).view(b, c, 1, 1)\n",
+    "        return x * y\n",
+    "\n",
+    "\n",
+    "def conv_3x3_bn(inp, oup, stride):\n",
+    "    return nn.Sequential(\n",
+    "        nn.Conv2d(inp, oup, 3, stride, 1, bias=False),\n",
+    "        nn.BatchNorm2d(oup),\n",
+    "        SiLU()\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "def conv_1x1_bn(inp, oup):\n",
+    "    return nn.Sequential(\n",
+    "        nn.Conv2d(inp, oup, 1, 1, 0, bias=False),\n",
+    "        nn.BatchNorm2d(oup),\n",
+    "        SiLU()\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "class MBConv(nn.Module):\n",
+    "    def __init__(self, inp, oup, stride, expand_ratio, use_se):\n",
+    "        super(MBConv, self).__init__()\n",
+    "        assert stride in [1, 2]\n",
+    "\n",
+    "        hidden_dim = round(inp * expand_ratio)\n",
+    "        self.identity = stride == 1 and inp == oup\n",
+    "        if use_se:\n",
+    "            self.conv = nn.Sequential(\n",
+    "                # pw\n",
+    "                nn.Conv2d(inp, hidden_dim, 1, 1, 0, bias=False),\n",
+    "                nn.BatchNorm2d(hidden_dim),\n",
+    "                SiLU(),\n",
+    "                # dw\n",
+    "                nn.Conv2d(hidden_dim, hidden_dim, 3, stride, 1, groups=hidden_dim, bias=False),\n",
+    "                nn.BatchNorm2d(hidden_dim),\n",
+    "                SiLU(),\n",
+    "                SELayer(inp, hidden_dim),\n",
+    "                # pw-linear\n",
+    "                nn.Conv2d(hidden_dim, oup, 1, 1, 0, bias=False),\n",
+    "                nn.BatchNorm2d(oup),\n",
+    "            )\n",
+    "        else:\n",
+    "            self.conv = nn.Sequential(\n",
+    "                # fused\n",
+    "                nn.Conv2d(inp, hidden_dim, 3, stride, 1, bias=False),\n",
+    "                nn.BatchNorm2d(hidden_dim),\n",
+    "                SiLU(),\n",
+    "                # pw-linear\n",
+    "                nn.Conv2d(hidden_dim, oup, 1, 1, 0, bias=False),\n",
+    "                nn.BatchNorm2d(oup),\n",
+    "            )\n",
+    "\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        if self.identity:\n",
+    "            return x + self.conv(x)\n",
+    "        else:\n",
+    "            return self.conv(x)\n",
+    "\n",
+    "\n",
+    "class EffNetV2(nn.Module):\n",
+    "    def __init__(self, cfgs, num_classes=1000, width_mult=1.):\n",
+    "        super(EffNetV2, self).__init__()\n",
+    "        self.cfgs = cfgs\n",
+    "\n",
+    "        # building first layer\n",
+    "        input_channel = _make_divisible(24 * width_mult, 8)\n",
+    "        layers = [conv_3x3_bn(1, input_channel, 2)]\n",
+    "        # building inverted residual blocks\n",
+    "        block = MBConv\n",
+    "        for t, c, n, s, use_se in self.cfgs:\n",
+    "            output_channel = _make_divisible(c * width_mult, 8)\n",
+    "            for i in range(n):\n",
+    "                layers.append(block(input_channel, output_channel, s if i == 0 else 1, t, use_se))\n",
+    "                input_channel = output_channel\n",
+    "        self.features = nn.Sequential(*layers)\n",
+    "        # building last several layers\n",
+    "        output_channel = _make_divisible(1792 * width_mult, 8) if width_mult > 1.0 else 1792\n",
+    "        self.conv = conv_1x1_bn(input_channel, output_channel)\n",
+    "        self.avgpool = nn.AdaptiveAvgPool2d((1, 1))\n",
+    "        self.classifier = nn.Linear(output_channel, num_classes)\n",
+    "\n",
+    "        self._initialize_weights()\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = self.features(x)\n",
+    "        x = self.conv(x)\n",
+    "        x = self.avgpool(x)\n",
+    "        x = x.view(x.size(0), -1)\n",
+    "        x = self.classifier(x)\n",
+    "        return x\n",
+    "\n",
+    "    def _initialize_weights(self):\n",
+    "        for m in self.modules():\n",
+    "            if isinstance(m, nn.Conv2d):\n",
+    "                n = m.kernel_size[0] * m.kernel_size[1] * m.out_channels\n",
+    "                m.weight.data.normal_(0, math.sqrt(2. / n))\n",
+    "                if m.bias is not None:\n",
+    "                    m.bias.data.zero_()\n",
+    "            elif isinstance(m, nn.BatchNorm2d):\n",
+    "                m.weight.data.fill_(1)\n",
+    "                m.bias.data.zero_()\n",
+    "            elif isinstance(m, nn.Linear):\n",
+    "                m.weight.data.normal_(0, 0.001)\n",
+    "                m.bias.data.zero_()\n",
+    "\n",
+    "\n",
+    "def effnetv2_s(**kwargs):\n",
+    "    \"\"\"\n",
+    "    Constructs a EfficientNetV2-S model\n",
+    "    \"\"\"\n",
+    "    cfgs = [\n",
+    "        # t, c, n, s, SE\n",
+    "        [1,  24,  2, 1, 0],\n",
+    "        [4,  48,  4, 2, 0],\n",
+    "        [4,  64,  4, 2, 0],\n",
+    "        [4, 128,  6, 2, 1],\n",
+    "        [6, 160,  9, 1, 1],\n",
+    "        [6, 256, 15, 2, 1],\n",
+    "    ]\n",
+    "    return EffNetV2(cfgs, **kwargs)\n",
+    "\n",
+    "\n",
+    "def effnetv2_m(**kwargs):\n",
+    "    \"\"\"\n",
+    "    Constructs a EfficientNetV2-M model\n",
+    "    \"\"\"\n",
+    "    cfgs = [\n",
+    "        # t, c, n, s, SE\n",
+    "        [1,  24,  3, 1, 0],\n",
+    "        [4,  48,  5, 2, 0],\n",
+    "        [4,  80,  5, 2, 0],\n",
+    "        [4, 160,  7, 2, 1],\n",
+    "        [6, 176, 14, 1, 1],\n",
+    "        [6, 304, 18, 2, 1],\n",
+    "        [6, 512,  5, 1, 1],\n",
+    "    ]\n",
+    "    return EffNetV2(cfgs, **kwargs)\n",
+    "\n",
+    "\n",
+    "def effnetv2_l(**kwargs):\n",
+    "    \"\"\"\n",
+    "    Constructs a EfficientNetV2-L model\n",
+    "    \"\"\"\n",
+    "    cfgs = [\n",
+    "        # t, c, n, s, SE\n",
+    "        [1,  32,  4, 1, 0],\n",
+    "        [4,  64,  7, 2, 0],\n",
+    "        [4,  96,  7, 2, 0],\n",
+    "        [4, 192, 10, 2, 1],\n",
+    "        [6, 224, 19, 1, 1],\n",
+    "        [6, 384, 25, 2, 1],\n",
+    "        [6, 640,  7, 1, 1],\n",
+    "    ]\n",
+    "    return EffNetV2(cfgs, **kwargs)\n",
+    "\n",
+    "\n",
+    "def effnetv2_xl(**kwargs):\n",
+    "    \"\"\"\n",
+    "    Constructs a EfficientNetV2-XL model\n",
+    "    \"\"\"\n",
+    "    cfgs = [\n",
+    "        # t, c, n, s, SE\n",
+    "        [1,  32,  4, 1, 0],\n",
+    "        [4,  64,  8, 2, 0],\n",
+    "        [4,  96,  8, 2, 0],\n",
+    "        [4, 192, 16, 2, 1],\n",
+    "        [6, 256, 24, 1, 1],\n",
+    "        [6, 512, 32, 2, 1],\n",
+    "        [6, 640,  8, 1, 1],\n",
+    "    ]\n",
+    "    return EffNetV2(cfgs, **kwargs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20340881"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = effnetv2_s(num_classes=17)\n",
+    "\n",
+    "sum([p.numel() for p in model.parameters()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([128, 17])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = torch.ones((128, 1, 16, 16))\n",
+    "y = model(x)\n",
+    "y.shape"
+   ]
   }
  ],
  "metadata": {
