--- a/demo.ipynb
+++ b/demo.ipynb
@@ -4,20 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'model.efficientnet'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32md:\\Inner_Wave\\Internal_Solitary_Wave_Localization\\demo.ipynb Cell 1\u001b[0m line \u001b[0;36m1\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Inner_Wave/Internal_Solitary_Wave_Localization/demo.ipynb#W0sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtorch\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mnn\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mfunctional\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mF\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Inner_Wave/Internal_Solitary_Wave_Localization/demo.ipynb#W0sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39meerie\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/d%3A/Inner_Wave/Internal_Solitary_Wave_Localization/demo.ipynb#W0sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mmodel\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39m*\u001b[39m\n",
-      "File \u001b[1;32md:\\Inner_Wave\\Internal_Solitary_Wave_Localization\\model\\__init__.py:5\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39mequiresnet\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39m*\u001b[39m\n\u001b[0;32m      4\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39mconvnext\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39m*\u001b[39m\n\u001b[1;32m----> 5\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39mefficientnet\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39m*\u001b[39m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'model.efficientnet'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -33,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +29,7 @@
        "'2.1.1+cu118'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +49,7 @@
        "True"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1479,6 +1466,20 @@
     "                m.weight.data.normal_(0, 0.001)\n",
     "                m.bias.data.zero_()\n",
     "\n",
+    "def effnetv2_tiny(**kwargs):\n",
+    "    \"\"\"\n",
+    "    Constructs a EfficientNetV2 model in tiny scale\n",
+    "    \"\"\"\n",
+    "    cfgs = [\n",
+    "        # t, c, n, s, SE\n",
+    "        [1,  12,  2, 1, 0],\n",
+    "        [4,  24,  4, 2, 0],\n",
+    "        [4,  32,  4, 2, 0],\n",
+    "        [4, 64,  6, 2, 1],\n",
+    "        [6, 80,  9, 1, 1],\n",
+    "        [6, 128, 15, 2, 1],\n",
+    "    ]\n",
+    "    return EffNetV2(cfgs, **kwargs)\n",
     "\n",
     "def effnetv2_s(**kwargs):\n",
     "    \"\"\"\n",
@@ -1549,7 +1550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1558,7 +1559,7 @@
        "20340881"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1571,7 +1572,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5392521"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = effnetv2_tiny(num_classes=17)\n",
+    "\n",
+    "sum([p.numel() for p in model.parameters()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1580,7 +1603,7 @@
        "torch.Size([128, 17])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
